[package]
name = "kvs"
version = "0.1.0"
authors = ["Murphy Cheng <chengzhiyi2000@gmail.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
log = "0.4.19"
stderrlog = "0.5.4"
byteorder = "1.4.3"
sled = "0.34.7"
dashmap = "5.4.0"
rayon = "1.7.0"
skiplist = "0.5.1"

assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[[bench]]
name = "bench"
harness = false
